[package]
name = "krb5_ccache"
description = "A library for storing a kerberos ccache"
version = "0.1.0"
edition = "2021"
authors = [
    "David Mulder <dmulder@suse.com>"
]
license = "MPL-2.0"
homepage = "https://github.com/himmelblau-idm/krb5_ccache"
repository = "https://github.com/himmelblau-idm/krb5_ccache"

[dependencies]
compact_jwt = { version = "0.4.1", features = ["msextensions"] }
picky-krb = "0.8.0"
